feat : 캐릭터 선택시 내가 선택한 캐릭터 더 쉽게 알아 볼수 있도록 변경

--- a/front/src/css/today.css
+++ b/front/src/css/today.css
@@ -246,13 +246,13 @@ div.comment {
     top: 38vh;
   }
   to {
-    transform: scale(65%);
+    transform: scale(60%);
     top: 5%;
   }
 }
 @keyframes enlarge {
   from {
-    transform: scale(65%);
+    transform: scale(60%);
     top: 5%;
   }
   to {
@@ -265,4 +265,9 @@ div.comment {
   top: 30px;
   right: 50px;
   position: relative;
+}
+
+.refImg {
+  opacity: 1 !important;
+  transform: scale(130%);
 }
