--- a/front/src/css/GameHof.css
+++ b/front/src/css/GameHof.css
@@ -10,11 +10,10 @@
 }
 
 .rankWrap {
-  margin-top: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  margin-bottom: 80px;
 }
 
 /*.gameIntroComment{*/
@@ -61,4 +60,22 @@
   100% {
     background-position: 350px;
   }
+}
+
+.goToCommentBtn {
+  font-size: 15px;
+  font-weight: bold;
+  background: #fff5d0;
+  border-radius: 50px;
+  width: 150px;
+  height: 40px;
+  border: none;
+  box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, 0.15);
+  color: #7e725c;
+  transition: transform 250ms;
+}
+
+.goToCommentBtn:hover {
+  transform: translateY(-0.25em);
+  cursor: pointer;
 }
