--- a/front/src/css/match.module.css
+++ b/front/src/css/match.module.css
@@ -90,6 +90,7 @@
   width: 700px;
   height: 50px;
   border-radius: 10px;
+  box-shadow: 5px 5px 4px -1px rgba(230, 221, 201, 0.75);
 }
 
 .inputBack > input {
