fix: 주민 선택 버튼이 댓글창 뒤로가는 현상 수정

--- a/front/src/css/today.css
+++ b/front/src/css/today.css
@@ -90,7 +90,6 @@
   box-shadow: 1px 3px 2px 1px rgba(25, 25, 25, 0.2);
   background-color: #ffb9ed;
   font-family: TmoneyRoundWindExtraBold;
-  z-index: 1;
 }
 .menu > button:hover {
   opacity: 0.8;
@@ -100,6 +99,7 @@
   margin-bottom: -50px;
   margin-right: -100vw;
   z-index: 1;
+  position: relative;
 }
 
 /* Comment inputbox */
