--- a/front/src/css/match.module.css
+++ b/front/src/css/match.module.css
@@ -118,6 +118,7 @@
   height: 50px;
   font-size: 16px;
   transition: all 0.3s ease-in-out;
+  box-shadow: 0px 3px rgba(21, 158, 147, 0.8);
 }
 
 .commentReg:hover {
@@ -129,10 +130,14 @@
 .commentArea {
   width: 50%;
   height: 65%;
-  background-color: white;
+  /* background-color: white; */
+  background-color: rgba(255, 255, 255, 0.5);
   padding: 10px;
   overflow-y: auto;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .commentArea::-webkit-scrollbar {
@@ -153,9 +158,48 @@
 }
 
 .commentWrapper {
-  font-family: "TmoneyRoundWindRegular" !important;
   height: fit-content;
-  padding: 10px;
+  padding: 10px 10px 10px 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.speechBubbleLeft,
+.speechBubbleRight {
+  position: relative;
+  background: #f7e7a3;
+  border-radius: 0.4em;
+  width: 80%;
+}
+
+.speechBubbleLeft:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 25px solid transparent;
+  border-right-color: #f7e7a3;
+  border-left: 0;
+  border-top: 0;
+  margin-top: -12.5px;
+  margin-left: -25px;
+}
+
+.speechBubbleRight:after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 25px solid transparent;
+  border-left-color: #f7e7a3;
+  border-right: 0;
+  border-top: 0;
+  margin-top: -12.5px;
+  margin-right: -25px;
 }
 
 .writer {
@@ -166,7 +210,7 @@
 }
 
 .commentDate {
-  color: #cec6ba;
+  color: #837156;
 }
 
 .commentContent {
