--- a/front/src/css/GuestPost.css
+++ b/front/src/css/GuestPost.css
@@ -60,29 +60,54 @@
   content: " ";
   display: block;
   position: absolute;
-  background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  left: 0;
-  top: 0;
   width: 100vw;
   height: 100vh;
   opacity: 0.8;
+  background-color: grey;
   z-index: -1;
+}
+
+.guestbookForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 20px 20px 20px 20px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
 }
 
 .contentBack {
   margin: 30px;
-  background-color: white;
-  text-align: center;
 }
 
 .contentBack > input {
   border: none;
+  font-size: 1em;
+  font-family: "TmoneyRoundWindExtraBold";
 }
 
 .contentBack > input:focus {
   outline: none;
+}
+
+.textarea {
+  width: 40em;
+  height: 20em;
+  border: none;
+  border-radius: 5px;
+  resize: none;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.textarea:focus {
+  outline: none;
+}
+
+.submitBtn {
+  margin-bottom: 30px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .submitBtn:hover {
