--- a/front/src/css/stats.css
+++ b/front/src/css/stats.css
@@ -93,6 +93,9 @@
 
 .graphBack {
   background-color: #f7f8ee;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 @keyframes blink-effect {
