--- a/front/src/css/GuestPost.css
+++ b/front/src/css/GuestPost.css
@@ -64,7 +64,7 @@
   height: 60px;
   font-family: "TmoneyRoundWindExtraBold";
   font-size: 1.7em;
-  color: #f16e7b;
+  color: #fe6978;
   transition: all 0.3s ease-in-out; 
   margin-bottom: 30px;
   margin-right: 20px;
@@ -131,11 +131,12 @@
 .textarea {
   width: 100%;
   height: 100%;
+  padding: 10px;
   border: none;
   border-radius: 5px;
   resize: none;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  font-family: "TmoneyRoundWindExtraBold";
+  font-family: "TmoneyRoundWindRegular";
   font-size: 1.5rem;
   color: #262626;
 }
