modify: add avg text style feat : 새로운 기능 추가 fix : 버그 수정 docs : 문서 수정 modify : 기능 수정 및 코드 수정 refact : 리팩토링

--- a/front/src/css/match.module.css
+++ b/front/src/css/match.module.css
@@ -272,6 +272,16 @@
   margin: 7px 0 7px 0;
 }
 
+.avgText {
+  font-size: 15px;
+  color: #cec6ba;
+}
+
+.avgSubText {
+  font-size: 18px;
+  color: #0cc6b6;
+}
+
 .btnsWrapper {
   width: 80%;
   margin-top: 40px;
