--- a/front/src/css/Board.css
+++ b/front/src/css/Board.css
@@ -63,3 +63,45 @@
   cursor: pointer;
   transform: translateY(-0.1em);
 }
+
+.guestbookForm {
+  width: 40%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 20px 20px 20px 20px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+
+.contentBack {
+  width: 90%;
+  height: 70%;
+  margin: 30px;
+}
+
+.contentBack > input {
+  border: none;
+  font-family: "TmoneyRoundWindExtraBold";
+}
+
+.contentBack > input:focus {
+  outline: none;
+}
+
+.textarea {
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 4px;
+  resize: none;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  font-family: "TmoneyRoundWindRegular";
+  font-size: 1.5rem;
+  color: #262626;
+}
+
+.textarea:focus {
+  outline: none;
+}
