modify: image width style feat : 새로운 기능 추가 fix : 버그 수정 docs : 문서 수정 modify : 기능 수정 및 코드 수정 refact : 리팩토링

--- a/front/src/css/match.module.css
+++ b/front/src/css/match.module.css
@@ -255,6 +255,7 @@
 }
 
 .imgWrapper > img {
+  width: 250px;
   border-radius: 50%;
   box-shadow: 4px 3px 4px 0px rgba(0, 0, 0, 0.3);
 }
@@ -374,6 +375,7 @@
 }
 
 .rankCharImage > img {
+  width: 250px;
   border-radius: 50%;
   box-shadow: 4px 3px 4px 0px rgba(0, 0, 0, 0.3);
 }
