--- a/front/src/css/Board.css
+++ b/front/src/css/Board.css
@@ -30,13 +30,22 @@
 
 .inputNickname,
 .inputTitle {
+  width: 100%;
+  height: 100%;
   border: none;
-  margin-bottom: 10px;
+  font-size: 1.5rem;
+  font-family: "TmoneyRoundWindRegular";
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
 }
 
 .inputNickname:focus,
 .inputTitle:focus {
   outline: none;
+}
+
+.alignButton {
+  /* 왜 안 돼 ! */
 }
 
 .submitBtn {
@@ -82,8 +91,8 @@
 }
 
 .boardForm {
-  width: 40%;
-  height: 50%;
+  width: 50%;
+  height: 60%;
   display: flex;
   flex-direction: column;
   justify-content: center;
