--- a/front/src/css/GuestPost.css
+++ b/front/src/css/GuestPost.css
@@ -21,14 +21,16 @@
 .date {
   margin-top: 1em;
   margin-bottom: 0;
-  font-size: 0.9em;
+  font-size: 1em;
   text-align: right;
   color: #3B3838;
+  padding-right: 32px;
 }
 
 .sender {
   margin-top: 0;
-  font-size: 0.9em;
+  padding-right: 32px;
+  font-size: 1.2rem;
   text-align: right;
   color: #3B3838;
   fontFamily: "TmoneyRoundWindExtraBold";
