--- a/front/src/css/Board.css
+++ b/front/src/css/Board.css
@@ -9,7 +9,7 @@
 }
 
 .boardPost::before {
-  background-image: url("/public/images/guestbookBg.jpg");
+  background-image: url("/public/images/boardBg.png");
   content: " ";
   display: block;
   position: absolute;
@@ -35,7 +35,6 @@
   border: none;
   font-size: 1.5rem;
   font-family: "TmoneyRoundWindRegular";
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 3px;
 }
 
