--- a/front/src/css/Board.css
+++ b/front/src/css/Board.css
@@ -100,7 +100,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 20px 20px 20px 20px rgba(0, 0, 0, 0.25);
+  background-color: #e0eafeb2;
+  box-shadow: 20px 20px 20px 20px rgba(255, 255, 255, 0.2);
   border-radius: 10px;
 }
 
