--- a/front/src/css/stats.css
+++ b/front/src/css/stats.css
@@ -92,10 +92,17 @@
 }
 
 .graphBack {
+  position: relative;
   background-color: #f7f8ee;
   padding: 20px;
   border-radius: 20px;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+.genderDesc > p {
+  text-align: center;
+  font-size: 1.2rem;
+  font-family: "TmoneyRoundWindRegular";
 }
 
 @keyframes blink-effect {
