--- a/front/src/css/stats.css
+++ b/front/src/css/stats.css
@@ -99,7 +99,7 @@
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-.genderDesc > p {
+.personalityDesc > p {
   text-align: center;
   font-size: 1.2rem;
   font-family: "TmoneyRoundWindRegular";
