--- a/front/src/css/stats.css
+++ b/front/src/css/stats.css
@@ -97,12 +97,20 @@
   padding: 20px;
   border-radius: 20px;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  font-family: "TmoneyRoundWindRegular";
 }
 
 .personalityDesc > p {
   text-align: center;
   font-size: 1.2rem;
   font-family: "TmoneyRoundWindRegular";
+}
+
+.popularitySpeciesDesc {
+  text-align: center;
+  font-size: 1.2rem;
+  font-family: "TmoneyRoundWindRegular";
+  line-height: 2rem;
 }
 
 @keyframes blink-effect {
