modify: change popularity species chart

--- a/front/src/css/stats.css
+++ b/front/src/css/stats.css
@@ -107,6 +107,7 @@
 }
 
 .popularitySpeciesDesc {
+  margin-top: 20px;
   text-align: center;
   font-size: 1.2rem;
   font-family: "TmoneyRoundWindRegular";
