modify: read style 수정중 feat : 새로운 기능 추가 fix : 버그 수정 docs : 문서 수정 modify : 기능 수정 및 코드 수정 refact : 리팩토링

--- a/front/src/css/read.module.css
+++ b/front/src/css/read.module.css
@@ -89,10 +89,17 @@
 }
 
 .imageArea {
-  width: 50%;
-  max-width: 50%;
+  width: 500px;
 }
 
 .textArea {
   align-self: flex-start;
+}
+
+.eachSlide > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: contain;
+  height: 350px;
 }
