modify: modify board css feat : 새로운 기능 추가 fix : 버그 수정 docs : 문서 수정 modify : 기능 수정 및 코드 수정 refact : 리팩토링

--- a/front/src/css/read.module.css
+++ b/front/src/css/read.module.css
@@ -89,7 +89,7 @@
 }
 
 .imageArea {
-  width: 500px;
+  width: 600px;
 }
 
 .textArea {
@@ -101,5 +101,7 @@
   align-items: center;
   justify-content: center;
   background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   height: 350px;
 }
