--- a/front/src/css/Board.css
+++ b/front/src/css/Board.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  z-index : 1;
+  z-index: 1;
 }
 
 .boardPost::before {
@@ -53,14 +53,14 @@
 }
 
 .submitBtn {
-  background-color: #C2F0EC;
+  background-color: #c2f0ec;
   border: none;
   border-radius: 30px;
   width: 170px;
   height: 60px;
   font-family: "TmoneyRoundWindExtraBold";
   font-size: 1.7em;
-  color: #00BAAC;
+  color: #00baac;
   margin-bottom: 30px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -73,7 +73,7 @@
 }
 
 .exitBtn {
-  background-color: #FFC9CF;
+  background-color: #ffc9cf;
   opacity: 0.9;
   border: none;
   border-radius: 30px;
@@ -102,7 +102,7 @@
   justify-content: center;
   align-items: center;
   background-color: #e0eafeb2;
-  box-shadow: 5px 5px 5px 5px rgba(255, 255, 255, 0.2);
+  box-shadow: 10px 5px 5px 5px rgba(255, 255, 255, 0.2);
   border-radius: 10px;
 }
 
