--- a/front/src/css/read.module.css
+++ b/front/src/css/read.module.css
@@ -38,6 +38,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 10px 5px 5px 5px rgb(255 255 255 / 20%);
 }
 
 .postWrapper::-webkit-scrollbar {
@@ -62,6 +63,11 @@
   width: 95%;
 }
 
+.titleArea {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
 .postWrapper > hr {
   width: 95%;
   border-bottom: none;
@@ -70,22 +76,24 @@
 }
 
 .title {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   margin-bottom: 3px;
 }
 
 .writer {
-  font-size: 1.1rem;
+  font-size: 1.3rem;
 }
 
 .date {
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 
 .contentArea {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 1.3rem;
+  margin-top: 20px;
 }
 
 .imageArea {
