--- a/front/src/css/Board.css
+++ b/front/src/css/Board.css
@@ -23,6 +23,7 @@
 
 .input {
   display: flex;
+  width: 100%;
   height: 100%;
   flex-direction: column;
   margin: 0 auto;
@@ -32,8 +33,9 @@
 .inputNickname,
 .inputTitle {
   width: 100%;
-  height: 47%;
+  height: 30%;
   border: none;
+  margin-bottom: 15px;
   font-size: 1.5rem;
   font-family: "TmoneyRoundWindRegular";
   border-radius: 3px;
@@ -95,8 +97,8 @@
 }
 
 .boardForm {
-  width: 50%;
-  height: 60%;
+  width: 80%;
+  height: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -108,8 +110,9 @@
 
 .contentBack {
   width: 90%;
+  flex-direction: column;
   height: 70%;
-  margin: 30px;
+  margin-bottom: 15px;
 }
 
 .contentBack > input {
@@ -135,4 +138,26 @@
 
 .textarea:focus {
   outline: none;
+}
+
+.inputFileButton{
+  padding: 6px 25px;
+  background-color: #fff5d0;
+  border-radius: 4px;
+  color: white;
+  width: fit-content;
+  height: 30px;
+  line-height: 30px;
+  cursor: pointer;
+  text-align: center;
+
+}
+
+.imageForm{
+  justify-items: center;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+
 }
