fix : add WYSIWYG css

--- a/front/src/css/readBoard.css
+++ b/front/src/css/readBoard.css
@@ -193,3 +193,7 @@
   background-clip: padding-box;
   border: 6px solid transparent;
 }
+
+.DraftEditor-root{
+  background-color: transparent !important;
+}
