--- a/front/src/css/readBoard.css
+++ b/front/src/css/readBoard.css
@@ -115,7 +115,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   right: 0;
   top: 0;
   display: none;
@@ -129,7 +129,7 @@
   backdrop-filter: blur(1.5px);
   -webkit-backdrop-filter: blur(1.5px);
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   height: 100%;
   width: 30vw;
   overflow-x: hidden;
@@ -152,8 +152,12 @@
 .sidebar .sidebar-mid {
   height: 70%;
   max-height: 70%;
-  font-size: 0.9rem;
+  font-size: 1rem;
   margin-top: 90px;
+}
+
+.react-slideshow-container .default-nav {
+  z-index: 1 !important;
 }
 
 .postCommentForm {
@@ -166,7 +170,6 @@
 .postCommentArea {
   width: 98%;
   height: 100%;
-  /* background-color: white; */
   background-color: rgba(255, 255, 255, 0.5);
   padding: 10px;
   overflow-y: auto;
@@ -192,4 +195,53 @@
   background: #d1d1d1;
   background-clip: padding-box;
   border: 6px solid transparent;
+}
+
+.postCommentBack {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  background-color: white;
+}
+
+.postCommentBack {
+  width: 80%;
+  height: 50px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 4px -1px rgba(230, 221, 201, 0.75);
+}
+
+.postCommentBack > input {
+  width: 90%;
+  height: 60%;
+  border: none;
+}
+
+.postCommentBack > input:focus {
+  outline: none;
+}
+
+.postCommentReg {
+  background: #0cc6b6;
+  border: none;
+  border-radius: 10px;
+  width: 60px;
+  height: 50px;
+  font-size: 16px;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 3px rgba(21, 158, 147, 0.8);
+}
+
+.postCommentReg:hover {
+  cursor: pointer;
+  background-color: #0bb5a6;
+  transition: all 0.3s ease-in-out;
+}
+
+.postCommentWrapper {
+  height: fit-content;
+  padding: 10px 10px 10px 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
