--- a/front/src/css/textEditor.css
+++ b/front/src/css/textEditor.css
@@ -28,6 +28,8 @@ div.public-DraftEditor-content {
     background-color: white;
     margin-bottom: 10px;
     border-radius: 5px;
+    display: flex;
+    flex-direction: row;
 }
 
 
