--- a/front/src/css/guestBook.css
+++ b/front/src/css/guestBook.css
@@ -23,6 +23,7 @@
     font-size: 1.3rem;
     flex-direction: column;
     justify-content: space-between;
+    overflow-x: hidden;
     /*align-items: end;*/
 }
 
@@ -32,4 +33,17 @@
     padding-top: 15px;
     padding-left:  32px;
     padding-right: 15px;
+}
+
+.guestContentWrapper  .DraftEditor-editorContainer,
+.guestContentWrapper  .public-DraftEditor-content {
+    margin-top : 3px;
+    margin-left: .3rem;
+    height: 200px;
+    width : 98%;
+    margin-bottom : 1rem;
+}
+
+.guestContentWrapper.DraftEditor-root{
+    width : 60%;
 }
